<resources>
    <string name="app_name">Github App</string>
    <string name="button_details">Detalhes</string>
    <string name="button_repos">Repositórios</string>
    <string name="label_blog">Blog</string>
    <string name="label_company">Companhia</string>
    <string name="label_location">Localização</string>
    <string name="label_email">E-mail</string>
    <string name="label_bio">Bio</string>
    <string name="label_username">Usuário</string>
    <string name="full_name">Nome</string>
    <string name="label_title">Title</string>
    <string name="label_forked_from">Forked from</string>
    <string name="label_description">Description</string>
    <string name="no_description">Sem descrição</string>
    <string name="label_no_content">Sem dados</string>
    <string name="label_retry">Tentar Novamente</string>
    <string name="search_hint">Pesquisar usuário</string>
    <string name="app_label">Github App</string>
    <string name="search_view">Pesquisar</string>
    <string name="title_search_activity">Resultado pesquisa</string>
    <string name="label_no_user_found">Nenhum usuário encontrado</string>
    <string name="title_user_repos_activity">Repositórios</string>
</resources>
