<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
            android:id="@+id/user_fragment_content_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:visibility="gone"/>

    <!--<TextView-->
            <!--android:id="@+id/user_fragment_content_no"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="?android:attr/textColorPrimary"-->
            <!--android:alpha="0.54"-->
            <!--android:visibility="gone"/>-->

    <LinearLayout
            android:id="@+id/user_fragment_content_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:visibility="gone">

        <TextView
                android:id="@+id/user_fragment_content_fullname"
                android:text="@string/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:alpha="0.87"
                android:maxLines="1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"/>

        <TextView
                android:id="@+id/user_fragment_content_fullname_bottom"
                android:text="@string/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorPrimary"
                android:alpha="0.54"
                android:maxLines="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        <TextView
                android:id="@+id/user_fragment_content_username"
                android:text="@string/label_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorPrimary"
                android:alpha="0.87"
                android:maxLines="1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"/>

        <TextView
                android:text="@string/label_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorPrimary"
                android:alpha="0.54"
                android:maxLines="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

        <LinearLayout
                android:id="@+id/user_fragment_content_bio_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

            <TextView
                    android:text="@string/label_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.54"
                    android:maxLines="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"/>

            <TextView
                    android:id="@+id/user_fragment_content_bio"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.87"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"/>
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/user_fragment_content_mail_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <ImageView
                    android:id="@+id/user_fragment_content_mail_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_outline_email"/>

            <TextView
                    android:id="@+id/user_fragment_content_mail"
                    android:text="@string/label_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.87"
                    android:maxLines="1"
                    android:layout_marginStart="72dp"/>

            <TextView
                    android:id="@+id/user_fragment_content_mail_bottom"
                    android:text="@string/label_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.54"
                    android:maxLines="1"
                    android:layout_below="@id/user_fragment_content_mail"
                    android:layout_marginStart="72dp"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/user_fragment_content_location_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <ImageView
                    android:id="@+id/user_fragment_content_location_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_outline_map"/>

            <TextView
                    android:id="@+id/user_fragment_content_location"
                    android:text="@string/label_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.87"
                    android:maxLines="1"
                    android:layout_marginStart="72dp"/>

            <TextView
                    android:id="@+id/user_fragment_content_location_bottom"
                    android:text="@string/label_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.54"
                    android:maxLines="1"
                    android:layout_below="@id/user_fragment_content_location"
                    android:layout_marginStart="72dp"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/user_fragment_content_company_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <ImageView
                    android:id="@+id/user_fragment_content_company_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_outline_business_center"/>

            <TextView
                    android:id="@+id/user_fragment_content_company"
                    android:text="@string/label_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.87"
                    android:maxLines="1"
                    android:layout_marginStart="72dp"/>

            <TextView
                    android:id="@+id/user_fragment_content_company_bottom"
                    android:text="@string/label_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.54"
                    android:maxLines="1"
                    android:layout_below="@id/user_fragment_content_company"
                    android:layout_marginStart="72dp"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/user_fragment_content_blog_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

            <ImageView
                    android:id="@+id/user_fragment_content_blog_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_outline_web"/>

            <TextView
                    android:id="@+id/user_fragment_content_blog"
                    android:text="@string/label_blog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.87"
                    android:maxLines="1"
                    android:layout_marginStart="72dp"/>

            <TextView
                    android:id="@+id/user_fragment_content_blog_bottom"
                    android:text="@string/label_blog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.54"
                    android:maxLines="1"
                    android:layout_below="@id/user_fragment_content_blog"
                    android:layout_marginStart="72dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>