<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
            android:id="@+id/row_repo_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/row_repo_name"
                android:text="@string/label_title"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:alpha="0.87"
                android:maxLines="1"/>

        <TextView
                android:id="@+id/row_repo_forked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_forked_from"
                android:paddingBottom="4dp"
                android:textColor="?android:attr/textColorPrimary"
                android:alpha="0.54"/>

        <TextView
                android:id="@+id/row_repo_description"
                android:textSize="14sp"
                android:text="@string/label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:alpha="0.54"
                android:maxLines="2"
                android:ellipsize="end"/>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_outline_star_border_24px"
                    android:id="@+id/star"
                    android:paddingTop="5dp"/>

            <TextView
                    android:id="@+id/row_repo_star_number"
                    android:text="100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:textSize="14sp"
                    android:paddingStart="4dp"
                    android:layout_toEndOf="@id/star"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.54"/>

            <ImageView
                    android:id="@+id/row_repo_language_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_outline_code"
                    android:layout_toEndOf="@id/star"
                    android:paddingStart="60dp"
                    android:paddingTop="6dp"/>

            <TextView
                    android:id="@+id/row_repo_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="14sp"
                    android:paddingTop="4dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.54"/>

            <ImageView
                    android:id="@+id/row_repo_date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_outline_access_time"
                    android:layout_toStartOf="@id/row_repo_date"
                    android:paddingEnd="4dp"
                    android:paddingTop="7dp"/>

            <TextView
                    android:id="@+id/row_repo_language"
                    android:text="Language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:textSize="14sp"
                    android:layout_toEndOf="@id/row_repo_language_icon"
                    android:paddingStart="4dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:alpha="0.54"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_toStartOf="@id/row_repo_date_icon"
                    android:layout_marginEnd="6dp"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>